<resources>
    <string name="app_name">itac</string>
    <string name="text_view_1_text">I am TextView 1</string>
    <string name="text_view_2_text">I am TextView 2</string>
    <string name="swap_button_text">Swap text views!</string>
    <string name="dz1_button_text">Homework 1</string>
    <string name="dz2_button_text">Homework 2</string>
    <string name="dz3_1_button_text">Homework 3.1</string>
    <string name="dz3_2_activity_button_text">Homework 3.2</string>
    <string name="dz4_button_text">Homework 4</string>
    <string name="dz5_button_text">Homework 5</string>
    <string name="dz6_button_text">Homework 6</string>
    <string name="dz9_button_text">Homework 9</string>

    <string name="login_text_edit_text">Username</string>
    <string name="password_text_edit_text">Password</string>
    <string name="sign_in_button_text">LOG IN</string>
    <string name="forgot_password_text"><u>Forgot your username/password?</u></string>
    <string name="sign_up_button_text">CREATE ACCOUNT</string>
  
    <string name="downloaded_image_image_view_description">Image from the internet</string>
    <string name="image_url">https://i.imgur.com/ikN0ib1.jpg</string>
    <string name="download_image_button_text">Download image!</string>
    <string name="yes_is_degree_check_box_text">Degree: YES</string>
    <string name="no_is_degree_check_box_text">Degree: NO</string>
    <string name="fellow_is_degree_checkbox_text">Degree</string>
    <string name="fellow_age_edit_text">Age: </string>
    <string name="save_changes_button">Save changes</string>
    <string name="delete_changes_button">Delete</string>
    <string name="create_button">Create</string>
    <string name="discard_button">Discard</string>
    <string name="filter_fellas_text_view">Filter fellas by: </string>
    <string name="wifi_on_text_view_text">ON</string>
    <string name="wifi_off_text_view_text">OFF</string>

    <string name="pie_chart_edit_text_preset">1,2,3,4,5,10,20,30,50,10,10,10</string>
    <string name="pie_chart_cut_button_text">Cut the Pie!</string>

</resources>
