<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_1"
        android:text="@string/text_view_1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/text_view_1_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/text_view_2"
        android:text="@string/text_view_2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/text_view_2_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/swap_button"
        android:text="@string/swap_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"/>

</FrameLayout>