<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ImageView
        android:id="@+id/login_image_view"
        style="@style/LoginActivityElementTheme"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/login_logo"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/login_edit_text"
        style="@style/LoginActivityEditTextTheme"
        android:hint="@string/login_text_edit_text"
        android:drawableLeft="@drawable/ic_login_name"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@+id/login_image_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/password_edit_text"
        style="@style/LoginActivityEditTextTheme"
        android:hint="@string/password_text_edit_text"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_login_password"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/sign_in_button"
        style="@style/LoginActivityElementTheme"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button_text"
        android:background="#64A3BC"
        android:layout_marginTop="35dp"
        android:textSize="18sp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/forgot_password_text"
        style="@style/LoginActivityElementTheme"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:text="@string/forgot_password_text"
        android:fontFamily="@font/monda_regular"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/sign_up_button"
        style="@style/LoginActivityElementTheme"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        android:background="#B6A784"
        android:layout_margin="30dp"
        android:textSize="18sp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>