<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/downloaded_image_image_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="20dp"
        android:background="#DFDADA"
        android:contentDescription="@string/downloaded_image_image_view_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <ProgressBar
        android:id="@+id/downloaded_image_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/downloaded_image_image_view"
        app:layout_constraintBottom_toBottomOf="@+id/downloaded_image_image_view"
        app:layout_constraintLeft_toLeftOf="@+id/downloaded_image_image_view"
        app:layout_constraintRight_toRightOf="@+id/downloaded_image_image_view"/>

    <EditText
        android:id="@+id/image_url_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:inputType="textUri"
        android:background="#DFDADA"
        android:text="@string/image_url"
        app:layout_constraintTop_toBottomOf="@+id/downloaded_image_image_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/download_image_button"
        android:text="@string/download_image_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_url_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>